# ImageType

./: .gitignore  README.md  analysis_report.txt  changes_and_commit.txt  config.json  main.py  pyproject.toml  requirements.txt  test_font.py  update_manager.py  v5.txt  version.json
.github/workflows/: app-build.yml  build.yml
data/languages/: ar.json  en.json  es.json  fr.json  it.json
data/templates/: وسائل_التواصل_الاجتماعي.json
languages/: ar.json  ar_eg.json  en.json  en_us.json  es.json  fr.json  it.json
templates/: آية_قرآنية.json  أعلان_بصيط.json
themes/: dark_theme.qss  light_theme.qss
